@@ -4,12 +4,9 @@ arch_get_kernel_flavour () {
 }
 
 arch_check_usable_kernel () {
-	if expr "$1" : '.*-parisc-' >/dev/null; then return 0; fi
-	if expr "$1" : '.*-parisc$' >/dev/null; then return 0; fi
-	if expr "$1" : '.*-32.*' >/dev/null; then return 0; fi
+	if echo "$1" | grep -Eq -- "-parisc(32)?(-.*)?$"; then return 0; fi
 	if [ "$2" = parisc ]; then return 1; fi
-	if expr "$1" : '.*-parisc64.*' >/dev/null; then return 0; fi
-	if expr "$1" : '.*-64.*' >/dev/null; then return 0; fi
+	if echo "$1" | grep -Eq -- "-parisc64?(-.*)?$"; then return 0; fi
 
 	# default to usable in case of strangeness
 	warning "Unknown kernel usability: $1 / $2"
