@@ -9,8 +9,10 @@ usable \
   linux-image-2.6.18-4-powerpc64
 unusable \
   linux-image-2.6-powerpc \
+  linux-image-2.6-powerpc-miboot \
   linux-image-2.6-powerpc-smp \
   linux-image-2.6-prep \
   linux-image-2.6.18-4-powerpc \
+  linux-image-2.6.18-4-powerpc-miboot \
   linux-image-2.6.18-4-powerpc-smp \
   linux-image-2.6.18-4-prep
