@@ -5,8 +5,10 @@ flavour powerpc
 kernel-2.6 linux-image-2.6-powerpc
 usable \
   linux-image-2.6-powerpc \
+  linux-image-2.6-powerpc-miboot \
   linux-image-2.6-powerpc-smp \
   linux-image-2.6.18-4-powerpc \
+  linux-image-2.6.18-4-powerpc-miboot \
   linux-image-2.6.18-4-powerpc-smp
 unusable \
   linux-image-2.6-powerpc64 \
