@@ -13,9 +13,13 @@ base-installer (1.87) UNRELEASED; urgency=low
 
   [ Frans Pop ]
   * Whitespace cleanup: reduce indentation in kernel selection scripts.
-  * Update kernel tests for i386.
+  * Update kernel tests for i386 and powerpc.
+  * Change kernel usability tests for all arches so that by default any
+    postfix is allowed, but only when separated from the flavor by a hyphen.
+    This allows both standard postfixes (e.g. -smp) postfixes for custom built
+    images, and is used to support updated kernel meta packages for stable.
 
- -- Frans Pop <fjp@debian.org>  Sun, 03 Feb 2008 14:15:15 +0100
+ -- Frans Pop <fjp@debian.org>  Tue, 05 Feb 2008 15:11:30 +0100
 
 base-installer (1.86) unstable; urgency=low
 
